--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
     <TextView
         android:textColor="@android:color/white"
         android:textSize="@dimen/_40sdp"
+        android:padding="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
         android:fontFamily="sans-serif-black"
         android:text="Fun Zone"
         android:layout_centerVertical="true"
@@ -113,7 +115,7 @@
 
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_5_Id"
+        android:id="@+id/card_3_Id"
         android:clickable="true"
         app:cardElevation="@dimen/_8sdp"
         app:cardBackgroundColor="@color/colorAccent"
@@ -152,7 +154,7 @@
 
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_6_Id"
+        android:id="@+id/card_4_Id"
         android:clickable="true"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardElevation="8dp"
