--- a/app/src/main/res/layout/activity_age_calculator.xml
+++ b/app/src/main/res/layout/activity_age_calculator.xml
@@ -12,7 +12,7 @@
     <TextView
         android:textColor="@android:color/holo_blue_dark"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/_50sdp"
         android:textStyle="bold|italic"
         android:text="Choose Your BirthDate and Today's Date"
         android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
         <Button
             android:id="@+id/btn_birthId"
             android:text="01/01/2020"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sdp"
             android:drawableLeft="@drawable/arrow_low"
             android:background="@android:color/transparent"
             android:layout_width="wrap_content"
@@ -35,13 +35,13 @@
             android:gravity="center"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:textSize="25sp"
+            android:textSize="@dimen/_25sdp"
             android:text="To"
             android:layout_width="0dp"
             android:layout_height="match_parent"/>
         <Button
             android:id="@+id/btn_todayId"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20sdp"
             android:drawableEnd="@drawable/arrow_low"
             android:background="@android:color/transparent"
             android:layout_width="wrap_content"
@@ -51,27 +51,27 @@
 
     <Button
         android:id="@+id/calculate_BtnId"
-        android:textSize="20sp"
+        android:textSize="@dimen/_20sdp"
         android:textAllCaps="false"
         android:textStyle="bold"
         android:text="Calculate"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
         android:textColor="@android:color/holo_blue_dark"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/_50sdp"
         android:textStyle="bold"
-        android:textSize="30sp"
+        android:textSize="@dimen/_30sdp"
         android:text="Result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/result_txtViewId"
         android:text="0 Years|0 Months|0 Days"
-        android:textSize="25sp"
+        android:textSize="@dimen/_25sdp"
         android:textStyle="bold"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
