--- a/app/src/main/res/layout/activity_guessing_number.xml
+++ b/app/src/main/res/layout/activity_guessing_number.xml
@@ -11,17 +11,17 @@
     <TextView
         android:layout_marginTop="@dimen/_60sdp"
         android:gravity="center"
-        android:background="@android:color/holo_red_light"
+        android:background="@drawable/shape_01"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:padding="10dp"
-        android:textColor="#ffff"
+        android:padding="@dimen/_10sdp"
+        android:textColor="@color/colorWhite"
         android:text="Guessing Game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/guessEditTextId"
         android:textColorHint="@android:color/primary_text_light_nodisable"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/_50sdp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:hint="Enter your number between 1-10"
         android:gravity="center"
@@ -32,19 +32,21 @@
     <Button
         android:id="@+id/checkGuessButtonId"
         android:text="Check"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorWhite"
         android:layout_gravity="center"
+        android:background="@drawable/shape_01"
         android:gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/_50sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:visibility="gone"
         android:id="@+id/resultGuessId"
         android:text="Congratulation! You have won."
         android:gravity="center"
         android:layout_gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
