--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".TicTacToe">
+
     <RelativeLayout
         android:background="@android:color/darker_gray"
         android:layout_width="match_parent"
@@ -16,31 +17,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:freezesText="true"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@color/colorPrimary"
             android:text="Player 1: 0"
-            android:textSize="30sp" />
+            android:textSize="@dimen/_30sdp" />
         <TextView
             android:id="@+id/text_view_p2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_p1"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@color/colorPrimary"
             android:freezesText="true"
             android:text="Player 2: 0"
-            android:textSize="30sp" />
+            android:textSize="@dimen/_30sdp" />
         <Button
             android:id="@+id/button_reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="33dp"
+            android:layout_marginEnd="@dimen/_33sdp"
             android:textAllCaps="false"
-            android:textColor="@android:color/holo_red_light"
+            android:textSize="@dimen/_20sdp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
             android:text="reset" />
     </RelativeLayout>
     <LinearLayout
-        android:background="@android:color/holo_purple"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -50,24 +53,24 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
         <Button
             android:id="@+id/button_01"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
         <Button
             android:id="@+id/button_02"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
     </LinearLayout>
     <LinearLayout
-        android:background="@android:color/holo_purple"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -77,24 +80,24 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
         <Button
             android:id="@+id/button_11"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
         <Button
             android:id="@+id/button_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
     </LinearLayout>
     <LinearLayout
-        android:background="@android:color/holo_purple"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -105,7 +108,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
         <Button
 
             android:id="@+id/button_21"
@@ -113,7 +116,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
         <Button
 
             android:id="@+id/button_22"
@@ -121,7 +124,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:freezesText="true"
-            android:textSize="60sp" />
+            android:textSize="@dimen/_60sdp" />
     </LinearLayout>
 
 </LinearLayout>
